Update 'wpg1nawza-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:4b48e4b46c698d832b6f89b86341579676eb3319@sha256:bb42364d78ee1bc71dc08349874268922a713885e67fe8c13d4d1c62795b5962

--- a/components/wpg1nawza-go/overlays/development/deployment-patch.yaml
+++ b/components/wpg1nawza-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wpg1nawza-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:4b48e4b46c698d832b6f89b86341579676eb3319@sha256:bb42364d78ee1bc71dc08349874268922a713885e67fe8c13d4d1c62795b5962
+          name: container-image
